src/tests/testfiles/unary-operators/types-6.txt
Error at 2:6: invalid type argument of unary '*' (have 'float')
*5.0;
 ^
